<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/subject_etxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:hint="@string/subject" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/msg_etxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|textMultiLine"
                        android:singleLine="false"
                        android:hint="@string/message" />
                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/send_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:background="@color/red"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
</LinearLayout>